# penguinV

./: .clang-format  .gitignore  .travis.yml  .yamllint  API_description.md  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestTestfile.cmake  DartConfiguration.tcl  LICENSE  Makefile  PenguinV.sln  README.md  appveyor.yml  cmake_install.cmake  penguinV.cbp  test.cc
examples/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  makefile
examples/bitmap_operation/: CMakeLists.txt  README.md  example_bitmap_operation.cpp  example_bitmap_operation.vcxproj  makefile
examples/blob_detection/: CMakeLists.txt  CTestTestfile.cmake  README.md  cmake_install.cmake  example_blob_detection  example_blob_detection-vs2019.vcxproj  example_blob_detection.cpp  example_blob_detection.vcxproj  makefile
examples/cuda/image_function/: CMakeLists.txt  example_image_function-vs2019-cuda12.4.vcxproj  example_image_function.cpp  example_image_function.vcxproj  makefile
examples/cuda/pinned_memory/: CMakeLists.txt  makefile  pinned_memory.cpp  pinned_memory.vcxproj
examples/edge_detection/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  example_edge_detection-vs2019.vcxproj  example_edge_detection.cpp  example_edge_detection.vcxproj  makefile
examples/fft/: CMakeLists.txt  example_fft.cpp  example_fft.vcxproj  makefile
examples/file_operation/: CMakeLists.txt  CTestTestfile.cmake  README.md  cmake_install.cmake  example_file_operation  example_file_operation-vs2019.vcxproj  example_file_operation.cpp  example_file_operation.vcxproj  makefile
examples/filters/: CMakeLists.txt  CTestTestfile.cmake  README.md  cmake_install.cmake  example_filters  example_filters-vs2019.vcxproj  example_filters.cpp  example_filters.vcxproj  makefile
examples/function_pool/: CMakeLists.txt  CTestTestfile.cmake  README.md  cmake_install.cmake  example_function_pool  example_function_pool-vs2019.vcxproj  example_function_pool.cpp  example_function_pool.vcxproj  makefile
examples/image_function/: CMakeLists.txt  CTestTestfile.cmake  README.md  cmake_install.cmake  example_image_function  example_image_function-vs2019.vcxproj  example_image_function.cpp  example_image_function.vcxproj  makefile
examples/median_filter/: README.md  example_median_filter.cpp  example_median_filter.vcxproj  makefile
examples/opencl/image_function/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  example_opencl_image_function  image_function-vs2019.vcxproj  image_function.vcxproj  main.cpp  makefile  multicl_example.vcxproj
examples/python/: README.md  bitmap_operation.py
examples/qt_framework/: CMakeLists.txt
examples/qt_framework/qimage_display/: CMakeLists.txt  README.md  example_qimage_display.pro  main.cpp
examples/raspicam/: README.md  main.cpp
examples/thread_pool/: CMakeLists.txt  README.md  example_thread_pool.cpp  example_thread_pool.vcxproj  makefile
examples/windows/edge_detection/: CMakeLists.txt  example_edge_detection.vcxproj  main.cpp
examples/x11/edge_detection/: edge_detection.cpp  makefile
test/performance_tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  performance_test_blob_detection.cpp  performance_test_blob_detection.h  performance_test_edge_detection.cpp  performance_test_edge_detection.h  performance_test_filtering.cpp  performance_test_filtering.h  performance_test_framework.cpp  performance_test_framework.h  performance_test_function_pool.cpp  performance_test_function_pool.h  performance_test_helper.cpp  performance_test_helper.h  performance_test_image_function.cpp  performance_test_image_function.h  performance_test_image_function_avx.cpp  performance_test_image_function_avx.h  performance_test_image_function_neon.cpp  performance_test_image_function_neon.h  performance_test_image_function_sse.cpp  performance_test_image_function_sse.h  performance_test_math.cpp  performance_test_math.h  performance_tests  performance_tests-vs2019.vcxproj  performance_tests.cpp  performance_tests.vcxproj
test/performance_tests/cuda/: CMakeLists.txt  Makefile  performance_test_helper_cuda.cu  performance_test_helper_cuda.cuh  performance_test_image_function_cuda.cpp  performance_test_image_function_cuda.h  performance_tests_cuda-vs2019-cuda12.4.vcxproj  performance_tests_cuda.cpp  performance_tests_cuda.vcxproj
test/performance_tests/opencl/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  performance_test_helper_opencl.cpp  performance_test_helper_opencl.h  performance_test_image_function_opencl.cpp  performance_test_image_function_opencl.h  performance_tests_opencl-vs2019.vcxproj  performance_tests_opencl.cpp  performance_tests_opencl.vcxproj
test/unit_tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  unit_test_bitmap.cpp  unit_test_bitmap.h  unit_test_blob_detection.cpp  unit_test_blob_detection.h  unit_test_edge_detection.cpp  unit_test_edge_detection.h  unit_test_fft.cpp  unit_test_fft.h  unit_test_file.cpp  unit_test_file.h  unit_test_framework.cpp  unit_test_framework.h  unit_test_function_pool.cpp  unit_test_function_pool.h  unit_test_helper.cpp  unit_test_helper.h  unit_test_image_buffer.cpp  unit_test_image_buffer.h  unit_test_image_function.cpp  unit_test_image_function.h  unit_test_image_function_avx.cpp  unit_test_image_function_avx.h  unit_test_image_function_neon.cpp  unit_test_image_function_neon.h  unit_test_image_function_sse.cpp  unit_test_image_function_sse.h  unit_test_jpeg_ops.cpp  unit_test_jpeg_ops.h  unit_test_math.cpp  unit_test_math.h  unit_test_png.cpp  unit_test_png.h  unit_tests  unit_tests-vs2019.vcxproj  unit_tests.cpp  (+1 more)
test/unit_tests/cuda/: CMakeLists.txt  Makefile  unit_test_helper_cuda.cu  unit_test_helper_cuda.cuh  unit_test_image_function_cuda.cpp  unit_test_image_function_cuda.h  unit_tests_cuda-vs2019-cuda12.4.vcxproj  unit_tests_cuda.cpp  unit_tests_cuda.vcxproj
test/unit_tests/opencl/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  unit_test_helper_opencl.cpp  unit_test_helper_opencl.h  (+5 more)
(+260 files in other folders)
